--- a/content/themes/vac/assets/src/sass/pages/_single.scss
+++ b/content/themes/vac/assets/src/sass/pages/_single.scss
@@ -9,6 +9,7 @@
 .post__title {
     font-size: fontsize(h1);
     line-height: baselines(13);
+    margin-bottom: baselines(4);
 }
 
 .column--post {
